--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
                 'type': 'circle',
                 'source': 'points',
                 'paint': {
-                    'circle-color': '#457b95',
+                    'circle-color': 'orange',
                     'circle-radius': 8,
                     'circle-stroke-width': 2,
-                    'circle-stroke-color': 'orange'
+                    'circle-stroke-color': '#457b95'
                 }
             });
 
