--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
             justify-content: flex-end;
         }
 
+        .link a {
+            text-decoration: none;
+        }
+
 
         .buttons {
             background-color: #eee;
