fix image height

--- a/index.html
+++ b/index.html
@@ -33,15 +33,21 @@
         }
 
         .img {
-            width: 13rem;
-            height: 13rem;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
         .top {
             display: flex;
         }
 
+        .left {
+            flex: 1;
+        }
+
         .right {
+            min-width: 17rem;
             padding: 1rem;
             flex: 1;
             display: flex;
